<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <ImageView
            android:id="@+id/imageView_motivation"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@mipmap/demo_one"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/value_ten"
            android:contentDescription="@string/app_name"/>

    <RelativeLayout
            android:id="@+id/rLayout_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/value_fifteen"
            android:layout_marginEnd="@dimen/value_fifteen"
            android:layout_below="@+id/imageView_motivation"
            android:layout_marginTop="@dimen/value_ten">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_admin"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_xlarge"
                tools:ignore="RelativeOverlap"/>

        <TextView
                android:id="@+id/textView_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_blank_text"
                android:layout_centerVertical="true"
                android:textSize="@dimen/text_size_xlarge"
                tools:ignore="RelativeOverlap"
                android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <TextView
            android:id="@+id/textView_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_ten"
            android:textSize="@dimen/text_size_xlarge"
            android:text="@string/text_blank_text"
            android:layout_below="@+id/rLayout_detail"
            android:layout_marginStart="@dimen/value_fifteen"
            android:layout_marginEnd="@dimen/value_fifteen"
            tools:ignore="RelativeOverlap"/>

</RelativeLayout>