<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".fitWithFriends.ui.activities.invite.InviteFriendsActivity">

    <RelativeLayout
            android:id="@+id/rLayout_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_header"
            android:background="@color/color_purple"
            tools:ignore="UselessParent">

        <RelativeLayout
                android:id="@+id/rLayout_back_arrow"
                android:layout_width="@dimen/value_forty"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="@dimen/value_twenty"
                    android:layout_height="@dimen/value_twenty"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/back_white_arrow"/>

        </RelativeLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_invite"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xxxlarge"
                tools:ignore="RelativeOverlap"/>

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/value_ten"
            android:layout_below="@+id/rLayout_header"
            android:layout_above="@+id/button_send"
            tools:ignore="UselessParent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/text_who_would_you_like_to_connect_with"
                android:textSize="@dimen/text_size_xxlarge"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/value_thirty"
                android:weightSum="2"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/value_twenty"
                android:baselineAligned="false">

            <LinearLayout
                    android:id="@+id/layout_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                <ImageView
                        android:id="@+id/imageView_radio_email"
                        android:layout_width="@dimen/value_twenty"
                        android:layout_height="@dimen/value_twenty"
                        android:src="@mipmap/radio_selected"
                        android:contentDescription="@string/app_name"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/value_ten"
                        android:textSize="@dimen/text_size_xxlarge"
                        android:text="@string/text_email"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/layout_phone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                <ImageView
                        android:id="@+id/imageView_radio_phone"
                        android:layout_width="@dimen/value_twenty"
                        android:layout_height="@dimen/value_twenty"
                        android:src="@mipmap/radio_unselected"
                        android:contentDescription="@string/app_name"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/value_ten"
                        android:textSize="@dimen/text_size_xxlarge"
                        android:text="@string/text_phone_contact"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/layout_email_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_twenty"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/value_fifty"
                    android:background="@drawable/button_outline">

                <EditText
                        android:id="@+id/editText_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_margin="@dimen/value_ten"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/text_enter_email_address"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/text_size_xlarge"
                        tools:ignore="Autofill,LabelFor"/>

            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="@dimen/value_twenty"
                    android:background="@drawable/button_outline">

                <EditText
                        android:id="@+id/editText_message"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_margin="@dimen/value_ten"
                        android:background="@null"
                        android:gravity="start"
                        android:hint="@string/text_add_message_optional"
                        android:inputType="textCapWords"
                        android:textSize="@dimen/text_size_xlarge"
                        tools:ignore="Autofill,LabelFor"/>

            </RelativeLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/value_twenty"/>
    </LinearLayout>

    <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/value_twenty"
            android:layout_centerInParent="true"
            android:text="@string/text_send"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_xxlarge"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@mipmap/sign_in_btn"
            android:contentDescription="@string/app_name"/>

    <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loader_invite"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="gone"
            app:indicatorColor="@color/color_purple"
            app:indicatorName="LineSpinFadeLoaderIndicator"/>

</RelativeLayout>