<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/value_five"
              android:background="@color/transparent"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/value_twenty"
            android:background="@color/white"
            app:cardCornerRadius="@dimen/value_ten">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

            <RelativeLayout
                    android:id="@+id/rLayout_report"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/value_header"
                    android:background="@color/color_purple">

                <TextView
                        android:id="@+id/textView_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/text_today_s_weight_new"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_xxxlarge"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap"/>

                <ImageView
                        android:id="@+id/imageView_cross"
                        android:layout_width="@dimen/value_twenty_five"
                        android:layout_height="@dimen/value_twenty_five"
                        android:src="@mipmap/cross_white"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:visibility="gone"
                        android:layout_marginEnd="@dimen/value_ten"
                        android:layout_marginTop="@dimen/value_twenty"
                        android:contentDescription="@string/app_name"/>

            </RelativeLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/value_twenty"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/value_fifteen"
                    android:layout_marginEnd="@dimen/value_fifteen"
                    android:text="@string/text_enter_your_weight"
                    android:textSize="@dimen/text_size_xxlarge"/>

            <RelativeLayout
                    android:id="@+id/rLayout_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/value_thirty"
                    android:layout_marginEnd="@dimen/value_thirty"
                    android:layout_marginTop="@dimen/value_twenty">

                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageView_weight"
                        android:layout_width="@dimen/value_sixty"
                        android:layout_height="@dimen/value_sixty"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/value_twenty"
                        android:src="@mipmap/weight"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_upload_pic"
                        android:layout_marginEnd="@dimen/value_ten"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/imageView_upload"
                        android:textSize="@dimen/text_size_xlarge"
                        tools:ignore="RelativeOverlap"/>

                <ImageView
                        android:id="@+id/imageView_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:src="@mipmap/upload_black"
                        android:layout_marginEnd="@dimen/value_twenty"
                        android:contentDescription="@string/app_name"/>

            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/value_twenty"
                    android:layout_marginEnd="@dimen/value_twenty"
                    android:layout_marginTop="@dimen/value_twenty">

                <RelativeLayout
                        android:layout_width="130dp"
                        android:layout_height="@dimen/value_forty"
                        android:background="@drawable/round_grey_outline">

                    <EditText
                            android:id="@+id/editText_weight"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/text_add_weight"
                            android:gravity="center"
                            android:background="@null"
                            android:textStyle="bold"
                            android:inputType="numberDecimal"
                            android:maxLength="6"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:textSize="@dimen/text_size_xlarge"
                            tools:ignore="Autofill"/>

                </RelativeLayout>

                <LinearLayout
                        android:id="@+id/layout_outline"
                        android:layout_width="100dp"
                        android:layout_height="@dimen/value_forty"
                        android:layout_alignParentEnd="true"
                        android:orientation="horizontal"
                        android:background="@drawable/blue_outline"
                        android:weightSum="2">

                    <TextView
                            android:id="@+id/textView_lbs"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/text_lbs"
                            android:layout_gravity="center"
                            android:background="@drawable/layout_outline"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_xxlarge"
                            android:layout_weight="1"/>

                    <TextView
                            android:id="@+id/textView_kg"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/text_kg"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/color_purple"
                            android:textSize="@dimen/text_size_xxlarge"
                            android:layout_weight="1"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height=".5dp"
                    android:layout_marginTop="@dimen/value_twenty"
                    android:background="@color/gray"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/value_fifty"
                    android:orientation="horizontal"
                    android:weightSum="2">

                <TextView
                        android:id="@+id/textView_cancel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/text_cancel"
                        android:textSize="@dimen/text_size_xxlarge"
                        android:textStyle="bold"/>

                <RelativeLayout
                        android:layout_width=".5dp"
                        android:layout_height="match_parent"
                        android:background="@color/gray"/>

                <TextView
                        android:id="@+id/textView_save"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/text_save"
                        android:textColor="@color/color_purple"
                        android:textSize="@dimen/text_size_xxlarge"
                        android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>